<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimerActivity">

    <Spinner
        android:id="@+id/spMins"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/small_margin"
        android:entries="@array/minutes"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/spSecs"
        app:layout_constraintStart_toEndOf="@+id/spHours"
        app:layout_constraintTop_toBottomOf="@+id/tvMinutes" />

    <Spinner
        android:id="@+id/spHours"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:entries="@array/hours"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHours" />

    <Spinner
        android:id="@+id/spSecs"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:entries="@array/seconds"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMinutes2" />

    <TextView
        android:id="@+id/tvHours"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/tvHours"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/spHours"
        app:layout_constraintStart_toStartOf="@+id/spHours"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMinutes"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/tvMinutes"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/spMins"
        app:layout_constraintStart_toStartOf="@+id/spMins"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMinutes2"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/tvSeconds"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/spSecs"
        app:layout_constraintStart_toStartOf="@+id/spSecs"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvColonLeft"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:text="@string/tvColon"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/spHours"
        app:layout_constraintEnd_toStartOf="@+id/spMins"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toEndOf="@+id/spHours"
        app:layout_constraintTop_toTopOf="@+id/spHours" />

    <TextView
        android:id="@+id/tvColonRight"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:text="@string/tvColon"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/spMins"
        app:layout_constraintEnd_toStartOf="@+id/spSecs"
        app:layout_constraintStart_toEndOf="@+id/spMins"
        app:layout_constraintTop_toTopOf="@+id/spMins" />

    <TextView
        android:id="@+id/tvTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:text="@string/txtCrono"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#9575CD"
        android:textSize="80sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spMins" />

    <Button
        android:id="@+id/btnStartStopTimer"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:onClick="onClickStartOrStop"
        android:text="@string/btnStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer" />

    <Button
        android:id="@+id/btnResetTimer"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:onClick="onClickReset"
        android:text="@string/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimer" />

</androidx.constraintlayout.widget.ConstraintLayout>