<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CronometroActivity">

    <TextView
        android:id="@+id/txtCrono"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/txtCrono"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="92sp"
        app:layout_constraintBottom_toTopOf="@+id/btnStartStop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStartStop"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:onClick="onClickStartOrStop"
        android:text="@string/btnStart"
        app:layout_constraintBottom_toTopOf="@+id/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCrono" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:onClick="onClickReset"
        android:text="@string/btnReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartStop" />

</androidx.constraintlayout.widget.ConstraintLayout>